# dobot-m1

./: .gitignore  README.md
dobot_m1/: CMakeLists.txt  package.xml
dobot_m1_demos/: CMakeLists.txt  package.xml
dobot_m1_demos/src/: dobot-move-position.py
dobot_m1_description/: CMakeLists.txt  package.xml
dobot_m1_description/launch/: .dobot-m1.launch.swp  display.launch  dobot-m1.launch  rviz_config.rviz
dobot_m1_description/meshes/: README.md  dobot_m1_axis-2.stl  dobot_m1_axis-3.stl  dobot_m1_axis-4.stl  dobot_m1_base.stl  dobot_m1_stand.stl  dobot_m1_z-axis.stl
dobot_m1_description/model/: dobot_m1.gazebo.xacro  dobot_m1.inertia.xacro  dobot_m1.transmission.xacro  dobot_m1.urdf.xacro  materials.urdf
dobot_m1_description/robot/: dobot_m1_in_world.urdf.xacro
dobot_m1_hw/: CMakeLists.txt  package.xml
dobot_m1_hw/config/: controllers.yaml  hardware_interfaces.yaml  names.yaml
dobot_m1_hw/include/DobotDll/: DobotDll.h  DobotType.h  README.md
dobot_m1_hw/include/dobot_m1_hw/: dobot_m1_hw_interface.h
dobot_m1_hw/launch/: dobot_m1_hw.launch
dobot_m1_hw/lib/DobotDll_x64/: README.md  libDobotDllM1.so.1.0.0  libQt5Network.so.5.6  libQt5SerialPort.so.5.6
dobot_m1_hw/src/: dobot_m1_hw_interface.cpp  dobot_m1_hw_node.cpp
dobot_m1_moveit/: .setup_assistant  CMakeLists.txt  package.xml
dobot_m1_moveit/config/: Eddie.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
dobot_m1_moveit/launch/: default_warehouse_db.launch  demo.launch  dobby_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
